Removed DebugActivity from release builds

--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.0 rc3"
 
     defaultConfig {
-        applicationId "com.i906.mpt.extension.countdownview"
+        applicationId "com.i906.mpt.extension.countdown"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -23,5 +23,5 @@ android {
 
 dependencies {
     compile project(':extension')
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
 }
