--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,16 @@
-apply plugin: 'com.android.application'
+buildscript {
 
-android {
-
-    compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc3"
-
-    defaultConfig {
-        applicationId "com.i906.mpt.extension.countdown"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+    repositories {
+        jcenter()
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
-dependencies {
-    compile project(':extension')
-    compile 'com.android.support:appcompat-v7:22.2.1'
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
